--- a/Areas/Dashboard/Views/Shared/_Layout.cshtml
+++ b/Areas/Dashboard/Views/Shared/_Layout.cshtml
@@ -23,13 +23,13 @@
 
         <ul class="navbar-nav ms-auto me-3 me-lg-4">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle d-flex align-items-center" id="userDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle d-flex align-items-center" id="userDropdown" href="#" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fas fa-user fa-fw ms-2"></i>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                    <li><a class="dropdown-item" href="/Dashboard/Profile"><i class="fa-solid fa-user me-2"></i>Profile</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item text-danger" href="/Account/Logout"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a></li>
+                    <li><a class="dropdown-item text-danger" href="/Account/Logout"><i
+                                class="fa-solid fa-right-from-bracket me-2"></i>Logout</a></li>
                 </ul>
             </li>
         </ul>
@@ -81,4 +81,3 @@
 </body>
 
 </html>
-
